<resources>
    <string name="app_name">GrabEquipment</string>
    <string name="forgot"><u>Forgot My Password</u></string>
    <string name="regiser"><u>Register</u></string>
    <string name="logout"><u>Log Out</u></string>
    <string name="change"><u>Change Password</u></string>
    <string name="add">Add Equipment</string>
    <string name="requests">My Requests</string>
    <string name="history">Borrow History</string>
    <string name="get">Get Equipment</string>
    <string name="equipment">Equipment</string>

    <string-array name="equipment">
        <item>VGA</item>
        <item>Projector</item>
        <item>LED</item>
    </string-array>

    <string-array name="status">
        <item>Returned</item>
        <item>Lost</item>
    </string-array>
</resources>
