<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_admin_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carlo.grabequipment.AdminHome">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView3" />


        <TextView
            android:text="Hello, admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_hello"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/MainColor"
            android:layout_margin="20dp" />


        <Button
            android:text="@string/equipment"
            android:layout_height="wrap_content"
            android:id="@+id/button_add"
            android:background="@drawable/rounded_button"
            android:textSize="24sp"
            android:textColor="@android:color/background_light"
            android:layout_margin="10dp"
            android:hapticFeedbackEnabled="false"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:onClick="view"/>

        <Button
            android:text="@string/requests"
            android:layout_height="wrap_content"
            android:id="@+id/button_search"
            android:background="@drawable/rounded_button"
            android:textSize="24sp"
            android:textColor="@android:color/background_light"
            android:layout_margin="10dp"
            android:hapticFeedbackEnabled="false"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:onClick="request"/>

        <Button
            android:text="@string/history"
            android:layout_height="wrap_content"
            android:id="@+id/button_request"
            android:background="@drawable/rounded_button"
            android:textSize="24sp"
            android:textColor="@android:color/background_light"
            android:layout_margin="10dp"
            android:hapticFeedbackEnabled="false"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:onClick="history"/>
        <TextView
            android:text="retrieve room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_change"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/MainColor"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:onClick="retrieve"
            android:visibility="gone" />

        <TextView
            android:text="@string/change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_changeAdmin"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/MainColor"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:onClick="change"/>

        <TextView
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_logout"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/MainColor"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:onClick="logout"/>


    </LinearLayout>
</RelativeLayout>
